fix: correção deploy github pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Victoorres.github.io/moveit",
+  "homepage": "https://victoorres.github.io/moveit/",
   "name": "moveit-next",
   "version": "0.1.0",
   "private": true,
